add getAllTeams, getTeam
