# engagedigital/model_team.go
@@ -1,0 +1,23 @@
+/*
+ * Engage Digital API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package engagedigital
+
+import (
+	"time"
+)
+
+type Team struct {
+	CreatedAt time.Time `json:"created_at,omitempty"`
+	Id        string    `json:"id,omitempty"`
+	LeaderIds []string  `json:"leader_ids,omitempty"`
+	Name      string    `json:"name,omitempty"`
+	UpdatedAt time.Time `json:"updated_at,omitempty"`
+	UserIds   []string  `json:"user_ids,omitempty"`
+}
